Modules/Platform/Linker/Apple-MOLD-OBJC.cmake
@@ -2,3 +2,5 @@
 # file Copyright.txt or https://cmake.org/licensing for details.
 
 include(Platform/Linker/Apple-AppleClang-OBJC)
+
+set(CMAKE_OBJC_PLATFORM_LINKER_ID MOLD)
