Modules/Platform/Linker/Apple-MOLD-OBJCXX.cmake
@@ -2,3 +2,5 @@
 # file Copyright.txt or https://cmake.org/licensing for details.
 
 include(Platform/Linker/Apple-AppleClang-OBJCXX)
+
+set(CMAKE_OBJCXX_PLATFORM_LINKER_ID MOLD)
