Modules/Platform/Linker/Linux-GNUgold-ASM.cmake
@@ -2,3 +2,5 @@
 # file Copyright.txt or https://cmake.org/licensing for details.
 
 include(Platform/Linker/Linux-GNU-ASM)
+
+set(CMAKE_ASM_PLATFORM_LINKER_ID GNUgold)
