Modules/Platform/Linker/SunOS-GNU.cmake
@@ -8,6 +8,7 @@ include_guard()
 include(Platform/Linker/GNU)
 
 macro(__sunos_linker_gnu lang)
+  set(CMAKE_${lang}_PLATFORM_LINKER_ID GNU)
   if(CMAKE_${lang}_COMPILER_LINKER)
     __cmake_set_whole_archive_feature("${CMAKE_${lang}_COMPILER_LINKER}" "${lang}")
   endif()
